# Netvan

./: .gitignore  Cargo.toml  README.md  index.html  install.ps1  package-lock.json  package.json  vite.config.ts
.cursor/skills/daroo-pakhsh-distribution-company/: SKILL.md  schemas.md
.cursor/skills/daroupakhsh-erp-task-tester/: SKILL.md  agent_paths.md
.cursor/skills/database-pakhsh-data-new/: SKILL.md  reference.md
.cursor/skills/database-pakhsh-data-new/scripts/: connection.py  list_schemas.py  list_tables.py  proc_info.py  query.py
.cursor/skills/prepare-for-docker/: SKILL.md
.cursor/skills/ssrs-tester/: SKILL.md
.cursor/skills/ssrs-tester/references/: rdl-parsing.md  rendering-methods.md
.cursor/skills/ssrs-tester/scripts/: jayeze_validation_results.json  normalize_and_diff.py  run_jayeze_validation.py  scan_page_reports.py  validate_jayeze_reports.py
.cursor/skills/team-foundation-server-check-in/: examples.md  reference.md
.cursor/skills/ui-page-audit-proposals/: SKILL.md
.cursor/skills/ui-page-proposals-implement/: SKILL.md
.cursor/skills/ui-standards/: SKILL.md
crates/netvan-collectors/: Cargo.toml
crates/netvan-collectors/src/: engine.rs  http_latency.rs  lib.rs  nic.rs  nslookup.rs  ping.rs  speedtest.rs  traceroute.rs  traffic_full.rs  traffic_process.rs
crates/netvan-core/: Cargo.toml
crates/netvan-core/src/: db.rs  history.rs  ipc.rs  lib.rs  paths.rs  settings.rs  types.rs
crates/netvan-core/tests/: smoke.rs
crates/netvan-service/: Cargo.toml
crates/netvan-service/src/: ipc_server.rs  main.rs  service.rs
docs/: description.md  dir-tree.md  endpoints.md
docs/modules/: netvan-collectors.md  netvan-core.md  ui-and-service.md
docs/potentional-bugs/: red.md  yellow.md
docs/suggestion/: suggestion1.md
growth-log/: PROGRESS.md
installer/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: commands.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src/components/: AppShell.tsx  HistoryFilter.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx
src/lib/: api.ts  utils.ts
src/pages/: AppsPage.tsx  DashboardPage.tsx  LatencyPage.tsx  NicsPage.tsx  SettingsPage.tsx  SpeedtestPage.tsx  ToolsPage.tsx
