[workspace]
resolver = "2"
members = [
  "src-tauri",
  "crates/netvan-core",
  "crates/netvan-collectors",
  "crates/netvan-service",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Armin Dashti"]
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"
parking_lot = "0.12"
once_cell = "1"
netvan-core = { path = "crates/netvan-core" }
netvan-collectors = { path = "crates/netvan-collectors" }
