[package]
name = "netvan"
version = "0.1.0"
description = "Netvan — Windows network monitor"
authors = ["Armin Dashti"]
edition = "2021"

[lib]
name = "netvan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
netvan-core = { path = "../crates/netvan-core" }
netvan-collectors = { path = "../crates/netvan-collectors" }
parking_lot = "0.12"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Pipes", "Win32_Storage_FileSystem", "Win32_Security", "Win32_System_SystemServices"] }
