[package]
name = "netvan-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Netvan Windows service — collectors + named-pipe IPC"

[[bin]]
name = "netvan-service"
path = "src/main.rs"

[dependencies]
netvan-core = { workspace = true }
netvan-collectors = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
windows-service = "0.7"
